# PEIRASTIC_control

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled  requirements.txt  setup.py
config/: admittance-controller.yml  cartesian-velocity-controller.yml  charmander.yml  control_config.yml  franka_nuc_config.json  local-host.yml  peirastic_default_logger.yml  spacenav-admittance-controller.yml  spacenav-debug-control.yml
docs/: libfranka_0.9_to_0.10_mapping.md
franka-interface/include/controllers/: cartesian_velocity.h
franka-interface/include/utils/: log_utils.h  shared_memory.h
franka-interface/include/utils/control_callbacks/: cartesian_velocity_calllback.h  joint_pos_callback.h  torque_callback.h
franka-interface/include/utils/traj_interpolators/: base_traj_interpolator.h  ruckig_pose_traj_interpolator.h  smooth_joint_traj_interpolator.h
franka-interface/src/: franka_control_node.cpp
franka-interface/src/controllers/: cartesian_velocity.cpp  osc_impedance.cpp  osc_position_impedance.cpp  osc_yaw_impedance.cpp
franka-interface/src/utils/: robot_utils.cpp
peirastic/: README.md  __init__.py
peirastic/franka_interface/: franka_interface.py
peirastic/netft_calib/: __init__.py  identification_core.py  named_joint_states.py  tf_transformations.py
peirastic/netft_calib/config/: __init__.py  joint_cmds.txt  named_joint_states.yml
peirastic/proto/franka_interface/: franka_controller_pb2.py  franka_robot_state_pb2.py
peirastic/scripts/: admittance_target_follow.py  get_peirastic_info.py  netft_data_acquisition.py  netft_identification.py  netft_pub_calib_result.py  print_robot_state.py  reset_robot_joints.py  run_spacemouse_osc.py  spacemouse_cartesian_min.py  spacenav_async_robust_test.py  spacenav_cartesian_min.py  spacenav_mode_switch_test.py  spacenav_teleop_publisher.py  test_spacenav_admittance.py
peirastic/utils/: __init__.py  admittance_utils.py  config_utils.py  ik_utils.py  input_utils.py  log_utils.py  ros_netft_launch.py  runtime_paths.py  transform_utils.py
peirastic/utils/io_devices/: keyboard.py  spacemouse.py
proto/franka-interface/: franka_controller.proto
scripts/: run_franka_interface.sh
